<resources>
    <string name="app_name">報茗牌</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">珍藏</string>
    <string name="title_order">訂單</string>
    <string name="map_id">e1f4a29f09ac6176</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="web_client_id">345224929102-uv7gc71rflsnkrb10h0lglbvfvl53dkv.apps.googleusercontent.com</string>
    <string name="show_all">全部顯示</string>
    <string name="show_nothing">全部隱藏</string>
    <string name="empty" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="explainPermission">主要功能需要使用到以下權限</string>
    <string name="yes">確定</string>
    <string name="no">取消</string>
    <string name="explainSettingPermission">您需要到設定頁面手動開啟權限</string>
    <string name="noOrderProductDenyDetele">無任何商品無法完成訂單，如要移除請點選移除按鈕</string>
    <string name="need_open_currentLocation">地圖功能需開啟定位</string>
    <string name="getDirectionFail">locationPermission false or selectedShop isNotInitialized</string>
    <string name="traffic_mode">trafficMode</string>
    <string name="shop_opening_time">營業時間</string>
    <string name="add_new_shop">新增商家</string>
    <string name="nav_done">結束</string>
    <string name="call">撥打電話</string>
    <string name="start_navigation">開始導航</string>
    <string name="look_menu">查看菜單</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="clock">clock</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="invite_friends">邀請好友</string>
    <string name="shopimg">shopImg</string>
    <string name="blackimg">blackImg</string>
    <string name="loading">loading…</string>
    <string name="add_new_product">新增商品</string>
    <string name="check_order">查看訂單</string>
    <string name="pop_back">popBack</string>
    <string name="options">選項</string>
    <string name="import_options">填入選項</string>
    <string name="nt">NT＄</string>
    <string name="zero">0</string>
    <string name="arrow">arrow</string>
    <string name="implement_common_set">套用常見配置</string>
    <string name="product_description">商品描述</string>
    <string name="product_type">商品類別</string>
    <string name="product_name">商品名稱</string>
    <string name="product_text">商品</string>
    <string name="click_upload_productImg">點擊上傳商品圖片</string>
    <string name="post_product">發佈商品</string>
    <string name="addBtn">addBtn</string>
    <string name="start_opening_time">開始營業時間</string>
    <string name="close_time">結束營業時間</string>
    <string name="show_shop_title">顯示商家</string>
    <string name="order_shop_img">order_shop_img</string>
    <string name="complete_order">完成訂單</string>
    <string name="x">x</string>
    <string name="order_history">歷史訂單</string>
    <string name="your_order"><![CDATA[你的訂單 >]]></string>
    <string name="add_new_drink">新增品項</string>
    <string name="delete">刪除</string>
    <string name="product_img">product_img</string>
    <string name="your_product">你的商品</string>
    <string name="nav_to_shop">導航至店家</string>
    <string name="call_shop">電話點餐</string>
    <string name="meal">餐點</string>
    <string name="place_holder">place_holder</string>
    <string name="map_icon">map_icon</string>
    <string name="rating_comment">評分及評論</string>
    <string name="order_name">訂單名稱</string>
    <string name="import_order_name">輸入訂單名稱</string>
    <string name="create_order">建立訂單</string>
    <string name="white_view">white_view</string>
    <string name="add_to_order_img">addToOrderImg</string>
    <string name="add_to_order">加入訂單</string>
    <string name="one">1</string>
    <string name="capacity">容量</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="post">確認發佈</string>
    <string name="post_shop_photo">點擊上傳店家封面</string>
    <string name="shop_info">店家資訊</string>
    <string name="ex">店家名稱(ex. 可不可熟成紅茶)</string>
    <string name="ex_branch">分店名稱(ex. 台北市政店)</string>
    <string name="address">地址</string>
    <string name="tel">店家電話</string>
    <string name="opening_time">營業時間</string>
    <string name="upload_menu">上傳菜單</string>
    <string name="click_upload_menu">點擊上傳菜單</string>
    <string name="leave_comment">留下對於這家店的評論吧！</string>
    <string name="content">Content</string>
    <string name="post_comment">送出評論</string>
    <string name="your_favorite">你的收藏</string>
    <string name="no_favorite">尚未有任何收藏</string>
    <string name="your_order_no_arrow">你的訂單</string>
    <string name="order_history_arrow"><![CDATA[歷史訂單 >]]></string>
    <string name="no_order">尚未有任何訂單</string>


</resources>