<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="type"
            type="int" />
        <variable
            name="position"
            type="int" />
        <variable
            name="viewModel"
            type="com.tsai.shakeit.ui.menu.addmenuitem.AddMenuItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/optionsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/options"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrowImg"
            app:layout_constraintStart_toEndOf="@+id/arrowImg"
            app:layout_constraintTop_toTopOf="@+id/arrowImg" />

        <EditText
            android:id="@+id/detail_edit"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:hint="@string/import_options"
            getCurrentType="@{type}"
            gerCurrentPosition="@{position}"
            viewModel="@{viewModel}"
            android:singleLine="true"
            android:text="@={viewModel.optionName}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/optionsCount"
            app:layout_constraintStart_toEndOf="@+id/optionsCount"
            app:layout_constraintTop_toTopOf="@+id/optionsCount"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/nt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nt"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_edit"
            app:layout_constraintEnd_toStartOf="@+id/product_price"
            app:layout_constraintStart_toEndOf="@+id/detail_edit"
            app:layout_constraintTop_toTopOf="@+id/detail_edit" />

        <EditText
            android:id="@+id/product_price"
            getCurrentType="@{type}"
            viewModel="@{viewModel}"
            gerCurrentPosition="@{position}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:maxLength="3"
            android:paddingHorizontal="20dp"
            android:singleLine="true"
            android:hint="@string/zero"
            android:text="@={viewModel.optionPrice}"
            app:layout_constraintBottom_toBottomOf="@+id/nt_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nt_text"
            app:layout_constraintTop_toTopOf="@+id/nt_text"
            android:autofillHints="0" />

        <ImageView
            android:id="@+id/arrowImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/arrow" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>