<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tsai.shakeit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.tsai.shakeit.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.tsai.shakeit.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />


    <fragment
        android:id="@+id/menuFragment"
        android:name="com.tsai.shakeit.ui.menu.MenuFragment"
        android:label="MenuFragment" >
        <argument
            android:name="shopData"
            app:argType="com.tsai.shakeit.data.Shop" />
    </fragment>

    <fragment
        android:id="@+id/drinksDetailFragment"
        android:name="com.tsai.shakeit.ui.detail.DrinksDetailFragment"
        android:label="DrinksDetailFragment">
        <argument
            android:name="product"
            app:argType="com.tsai.shakeit.data.Product" />
    </fragment>

    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.tsai.shakeit.ui.orderdetail.OrderDetailFragment"
        android:label="OrderDetailFragment" >
        <argument android:name="order"
            app:argType="com.tsai.shakeit.data.Order" />
    </fragment>

    <action
        android:id="@+id/navTo_Menu"
        app:destination="@id/menuFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_enter_anim"
        app:popExitAnim="@anim/nav_default_exit_anim" />
    <action
        android:id="@+id/navToDetail"
        app:destination="@id/drinksDetailFragment"
        app:enterAnim="@anim/bottom_to_top"
        app:exitAnim="@anim/top_to_bottom"
        app:popExitAnim="@anim/top_to_bottom" />
    <action
        android:id="@+id/navToOrder"
        app:destination="@id/navigation_order"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    <action
        android:id="@+id/navToOrderDetail"
        app:destination="@id/orderDetailFragment"
        app:enterAnim="@anim/bottom_to_top"
        app:exitAnim="@anim/top_to_bottom"
        app:popExitAnim="@anim/top_to_bottom" />
    <action
        android:id="@+id/navToHome"
        app:destination="@id/navigation_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true" />

</navigation>