<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.tsai.shakeit.ui.orderdetail.OrderDetailViewModel" />

        <variable
            name="totalPrice"
            type="int" />

        <variable
            name="shop"
            type="com.tsai.shakeit.data.Shop" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey2"
        tools:context=".ui.orderdetail.OrderDetailFragment">

        <TextView
            android:id="@+id/orderPage_title"
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:text="@string/your_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_rev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderPage_title"
            tools:itemCount="5"
            tools:listitem="@layout/order_friends_row" />

        <View
            android:id="@+id/separate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friends_rev" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderDetail_rev"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/order_detail_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meal_txt"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="1"
            tools:listitem="@layout/order_detail_row" />

        <androidx.cardview.widget.CardView
            android:id="@+id/order_detail_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/order_nav_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/gery"
                    android:fontFamily="@font/roboto"
                    android:onClick="@{()->viewModel.navToHome(shop)}"
                    android:text="@string/nav_to_shop"
                    android:textColor="@color/black"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/order_tel_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/order_tel_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/gery"
                    android:fontFamily="@font/roboto"
                    android:text="@string/call_shop"
                    android:textColor="@color/black"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/order_nav_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/order_totalPrice"
                    totalPrice="@{totalPrice}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/order_tel_btn"
                    app:layout_constraintStart_toStartOf="@+id/order_tel_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/meal_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gery"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/meal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friends_rev" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/notifyButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/corner_radius2"
            android:backgroundTint="@color/gery"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{()->viewModel.sendNotification()}"
            android:padding="8dp"
            android:src="@drawable/notifications"
            android:visibility="@{viewModel.isNotifyBtnVisible? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/orderPage_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orderPage_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>